Fix ios layout issue

--- a/css/common.css
+++ b/css/common.css
@@ -90,7 +90,7 @@ header h1 img {height:48px;}
 
 @media (max-width:1024px) {
 	header {position:fixed; top:0; left:0; z-index:1; width:100%; height:87px;}
-	header.on {height:100%;}
+	header.on {height:100vh;}
 	header h1 {top:50px; left:24px;}
 	header h1 img {height:37px;}
 	header .open {position:absolute; z-index:2; top:56px; right:24px; width:24px; height:24px; text-indent:-9999px;}
@@ -127,8 +127,8 @@ nav .menu li {float:left; padding:10px 20px;}
 nav .menu li a {display:block; line-height:1.6em; font-size:18px;}
 
 @media (max-width:1024px) {
-	nav {position:fixed; top:0; left:0; z-index:1; width:100%; height:100vh; background:#000; transition:all .3s cubic-bezier(.75, 0, 1, .25); transform:translateY(-100%);}
-	header.on nav {transform:translateY(0); color:#fff;}
+	nav {position:fixed; top:0; left:0; z-index:1; width:100%; height:100vh; background:#000; transform:translateY(-100%);}
+	header.on nav {color:#fff; transition:all .3s cubic-bezier(.75, 0, 1, .25); transform:translateY(0);}
 	nav .nav_wrap {height:100%;}
 	nav .menu {padding-top:120px;}
 	nav .menu li {float:none; padding:10px 0;}
